--- a/.github/workflows/build-multiple-versions.yml
+++ b/.github/workflows/build-multiple-versions.yml
@@ -2,47 +2,105 @@ name: Build multiple versions of Julia within one environment
 
 on: [push, pull_request, workflow_dispatch]
 
-# Define environment variables as shortcuts for both refs
+# Define environment variables as shortcuts for both refs.
+# This is not strictly needed but it makes the workflows easier to edit and copy.
 env:
-  JULIA_REF1: 'v1.5.3'
-  JULIA_REF2: 'v1.5.1'
+  REF1: "v1.5.3"
+  REF2: "v1.5.1"
+
+# Build two versions of Julia in parallel and upload them as Job artifacts.
+# This allows reusing the same cache across all builds while extracting it to different target directories.
+# It also speeds up the build by not building all versions in series.
 
 jobs:
-  test:
+  build1:
     runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: true
+      matrix:
+        julia-ref: ["${{ env.REF1 }}"]
 
     steps:
       - uses: actions/checkout@v2
 
       - name: Cache
-        id: cache-julia1
+        id: cache-julia
         uses: actions/cache@v2
         with:
           path: ~/julia
-          key: ${{ runner.os }}-${{ env.JULIA_REF1 }}
+          # Note that this cache key will not work with branches
+          # because there could be new commits after the cache has been created
+          key: ${{ runner.os }}-${{ matrix.julia-ref }}
 
       - name: Build Julia
-        if: steps.cache-julia1.outputs.cache-hit != 'true'
+        if: steps.cache-julia.outputs.cache-hit != 'true'
         uses: ./
         with:
-          ref: "${{ env.JULIA_REF1 }}"
-
-      - name: Cache
-        id: cache-julia2
-        uses: actions/cache@v2
-        with:
-          path: ~/julia-${{ env.JULIA_REF2 }}
-          # Note that the target dir is part of the cache key to ensure a correct hit
-          key: ${{ runner.os }}-${{ env.JULIA_REF2 }}-HOME-julia-${{ env.JULIA_REF2 }}
-
-      - name: Build Julia
-        if: steps.cache-julia2.outputs.cache-hit != 'true'
-        uses: ./
-        with:
-          ref: "${{ env.JULIA_REF2 }}"
-          target-dir: $HOME/julia-${{ env.JULIA_REF2 }}
+          ref: ${{ matrix.julia-ref }}
 
       - name: Show versioninfo()
+        run: ~/julia/julia -e "using InteractiveUtils; versioninfo()"
+
+      - name: Upload artifact
+        run: actions/upload-artifact@v2
+        with:
+          name: julia-${{ matrix.julia-ref }}
+          path: ~/julia
+
+  build2:
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: true
+      matrix:
+        julia-ref: ["${{ env.REF2 }}"]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Cache
+        id: cache-julia
+        uses: actions/cache@v2
+        with:
+          path: ~/julia
+          # Note that this cache key will not work with branches
+          # because there could be new commits after the cache has been created
+          key: ${{ runner.os }}-${{ matrix.julia-ref }}
+
+      - name: Build Julia
+        if: steps.cache-julia.outputs.cache-hit != 'true'
+        uses: ./
+        with:
+          ref: ${{ matrix.julia-ref }}
+
+      - name: Show versioninfo()
+        run: ~/julia/julia -e "using InteractiveUtils; versioninfo()"
+
+      - name: Upload artifact
+        run: actions/upload-artifact@v2
+        with:
+          name: julia-${{ matrix.julia-ref }}
+          path: ~/julia
+
+  ci:
+    runs-on: ubuntu-20.04
+
+    # Wait until build1 and build2 have finished
+    needs: [build1, build2]
+
+    steps:
+      - name: Download Julia ${{ env.REF1 }}
+        uses: actions/download-artifact@v2
+        with:
+          name: julia-${{ env.REF1 }}
+          path: ~/julia-${{ env.REF1 }}
+
+      - name: Download Julia ${{ env.REF2 }}
+        uses: actions/download-artifact@v2
+        with:
+          name: julia-${{ env.REF2 }}
+          path: ~/julia-${{ env.REF2 }}
+      
+      - name: Show versioninfo()
         run: |
-          ~/julia/julia -e "using InteractiveUtils; versioninfo()"
-          ~/julia-${{ env.JULIA_REF1 }}/julia -e "using InteractiveUtils; versioninfo()"
+          ~/julia-${{ env.REF1 }}/julia -e "using InteractiveUtils; versioninfo()"
+          ~/julia-${{ env.REF2 }}/julia -e "using InteractiveUtils; versioninfo()"
