--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
     - name: Clone Julia
       run: git clone ${{ inputs.source-repo }} "${{ inputs.target-dir }}"
       shell: bash
-    
+
     - name: Checkout ref
       run: |
         cd "${{ inputs.target-dir }}"
@@ -36,9 +36,14 @@ runs:
     - name: Build Julia
       run: |
         cd "${{ inputs.target-dir }}"
+
+        # GHA runners don't all run on the same hardware
+        # Not specifying a CPU target can lead to issues when caching the build output
+        echo "JULIA_CPU_TARGET=x86_64" >> Make.user
+
         make -j 2
       shell: bash
-    
+
     - name: Print Version
       run: |
         cd "${{ inputs.target-dir }}"
